--- a/src/css/movieCard.css
+++ b/src/css/movieCard.css
@@ -1,5 +1,17 @@
 .card {
-    transition: all .2s;
+    transition: max-height 1s;
+    overflow: hidden;
+}
+
+.card-body {
+    max-height: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.card:hover .card-body {
+    max-height: 300px;
+    padding: 10px;
 }
 
 @media screen and (min-width: 700px) {
