--- a/src/css/partials/_movieCard_options.scss
+++ b/src/css/partials/_movieCard_options.scss
@@ -6,6 +6,10 @@
     &__extra-info {
         font-size: 0.8rem;
         color: $secondary-colour;
-        opacity: 0.7;
+        opacity: 0.8;
     }
+}
+
+.offcanvas-img {
+    border-radius: 10px;
 }
