Fixed breakpoints for mobile and desktop. Added modal for desktop and fixed styling

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,7 @@
 @import "./partials/_colour";
 @import "./partials/global";
 
+@import "./partials/_movieCard-modal";
 @import "./partials/movieCard_options";
 @import "./partials/movieCard";
 @import "./partials/movieCarousel";
