Added and fixed desktop styling

--- a/src/css/partials/_global.scss
+++ b/src/css/partials/_global.scss
@@ -1,6 +1,7 @@
 body {
     background-image: linear-gradient(to top right, $black 90%, $gray);
     user-select: none;
+    font-family: 'Acme', sans-serif;
 }
 
 a {
