--- a/src/css/partials/_movieCarousel.scss
+++ b/src/css/partials/_movieCarousel.scss
@@ -7,17 +7,21 @@
     color: $white;
     text-shadow: 0 0 1px $black;
     font-size: 1.25rem;
-    padding: 15px 0 10px 10px;
+    padding: 15px 0 10px 5px;
 }
 
 @include media-breakpoint-up(xxl) {
+    .swiper {
+        padding: 10px;
+    }
+    
     .carousel-heading {
-        font-size: 24px;
-        padding-bottom: 20px;
+        font-size: 1.75rem;
+        padding: 15px 0 0 30px;
     }
     
     .swiper-container {
-        width: 97%;
+        width: 95%;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 50px;
@@ -30,6 +34,14 @@
             height: 110%;
             top: 0%;
             color: $secondary-colour;
+        }
+        
+        .swiper-button-prev {
+            left: 0px;
+        }
+        
+        .swiper-button-next {
+            right: 0px;
         }
         
         .swiper-button-disabled {
