Added search functionality

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,3 +7,4 @@
 @import "./partials/movieCard";
 @import "./partials/movieCarousel";
 @import "./partials/_navbar";
+@import "./partials/_searchPage";
